<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ics.hindu.matrimony.fragment.registration.SocialDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/login_margin_txt_top_10"
        android:paddingRight="@dimen/login_margin_txt_top_10">

        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="Education level*"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


            <Spinner
                android:padding="20dp"
                android:id="@+id/etedulevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marital" />


        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="Education field*"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


        <Spinner
            android:padding="20dp"
            android:id="@+id/etedufield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />
        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="Annual Income*"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


        <Spinner
            android:padding="20dp"
            android:id="@+id/edanualin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />

        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="More Personal information"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="Fathers Status"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:padding="20dp"
            android:id="@+id/fathersta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />

        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="Mother's Status"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:padding="20dp"
            android:id="@+id/motherhersta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />


        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="No of brothers"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:padding="20dp"
            android:id="@+id/noofbroersta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />


        <ics.hindu.matrimony.view.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="No of Status"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Spinner
            android:padding="20dp"
            android:id="@+id/noofstatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marital" />
        <ics.hindu.matrimony.view.InputOpenFieldView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText
                android:id="@+id/etGotra"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:hint="@string/gotra"
                android:singleLine="true" />
        </ics.hindu.matrimony.view.InputOpenFieldView>

        <ics.hindu.matrimony.view.InputOpenFieldView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText

                android:id="@+id/etGotraNanihal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/gotra_nanihal"
                android:singleLine="true" />
        </ics.hindu.matrimony.view.InputOpenFieldView>
        <ics.hindu.matrimony.view.InputFieldView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText
                android:id="@+id/etCaste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/caste"
                android:singleLine="true" />
        </ics.hindu.matrimony.view.InputFieldView>

        <ics.hindu.matrimony.view.InputFieldView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText
                android:id="@+id/etManglik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/manglik" />
        </ics.hindu.matrimony.view.InputFieldView>

        <ics.hindu.matrimony.view.CustomTextViewBold
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_10"
            android:text="@string/birth_details"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />


        <ics.hindu.matrimony.view.InputFieldView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText
                android:id="@+id/etBirthTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_time" />
        </ics.hindu.matrimony.view.InputFieldView>

        <ics.hindu.matrimony.view.InputOpenFieldView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_txt_top_5"
            android:visibility="gone">

            <ics.hindu.matrimony.view.CustomEditText
                android:id="@+id/etBirthPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_place"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </ics.hindu.matrimony.view.InputOpenFieldView>


    </LinearLayout>

</ScrollView>