<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ics.hindu.matrimony.view.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="22sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:visibility="gone"
                android:id="@+id/ivImage"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_margin_txt_top_5"
                android:src="@drawable/default_error" />

            <!--**************static design****************-->
            <RelativeLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_package">

                <ics.hindu.matrimony.view.CustomTextViewBold
                    android:id="@+id/tvCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="32dp"
                    android:layout_toStartOf="@+id/tvbRS"
                    android:text="Rs 200"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <ics.hindu.matrimony.view.CustomTextViewBold
                    android:id="@+id/tvbRS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="40sp" />

            </RelativeLayout>
            <!--**************static design****************-->

            <ics.hindu.matrimony.view.CustomTextViewBold
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_margin_txt_top_5"
                android:gravity="center"
                android:text=" "
                android:textSize="28sp" />

            <ics.hindu.matrimony.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_margin_txt_top_5"
                android:gravity="center"
                android:text="@string/conatact_msg"
                android:textSize="18sp" />

            <!--static design**************************************-->
            <LinearLayout
                android:id="@+id/llChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:gravity="center">

                <ics.hindu.matrimony.view.CustomTextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector_app"
                    android:gravity="center"
                    android:text="Pay Now"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>
            <!--static design**************************************-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:id="@+id/rlTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="15dp">

                <ics.hindu.matrimony.view.CustomTextViewBold
                    android:id="@+id/tvClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/tvOk"
                    android:clickable="true"
                    android:padding="10dp"
                    android:text="@string/close"
                    android:textSize="16sp" />

                <ics.hindu.matrimony.view.CustomTextViewBold
                    android:id="@+id/tvOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:padding="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
